--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   Sport_tv:
-    image: reklama
+    image: reklama_tracking
     build: .
     volumes:
-      - /home/graph/Project/Advertisement_tracking/videos/Sport_tv:/Projects/Advertisement_tracking/videos
+      - /home/graph/Project/Ad_tracking_with_color_filter/videos:/Projects/Ad_tracking_with_color_filter/videos
     command: /bin/sh -c 'python3 reklama_detection.py sport_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
@@ -19,10 +19,10 @@ services:
         
   
   Kinoteatr_tv:
-    image: reklama
+    image: reklama_tracking
     build: .
     volumes:
-      - /home/graph/Project/Advertisement_tracking/videos/Kinoteatr:/Projects/Advertisement_tracking/videos
+      - /home/graph/Project/Ad_tracking_with_color_filter/videos:/Projects/Ad_tracking_with_color_filter/videos
     command: /bin/sh -c 'python3 reklama_detection.py kinoteatr_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
@@ -36,10 +36,10 @@ services:
               capabilities: [gpu]
 
   Sevimli_tv:
-    image: reklama
+    image: reklama_tracking
     build: .
     volumes:
-      - /home/graph/Project/Advertisement_tracking/videos/Sevimli_tv:/Projects/Advertisement_tracking/videos
+      - /home/graph/Project/Ad_tracking_with_color_filter/videos:/Projects/Ad_tracking_with_color_filter/videos
     command: /bin/sh -c 'python3 reklama_detection.py sevimli_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
@@ -53,10 +53,10 @@ services:
               capabilities: [gpu]
 
   My5_tv:
-    image: reklama
+    image: reklama_tracking
     build: .
     volumes:
-      - /home/graph/Project/Advertisement_tracking/videos/My5_tv:/Projects/Advertisement_tracking/videos
+      - /home/graph/Project/Ad_tracking_with_color_filter/videos:/Projects/Ad_tracking_with_color_filter/videos
     command: /bin/sh -c 'python3 reklama_detection.py my5_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
@@ -70,10 +70,10 @@ services:
               capabilities: [gpu]
   
   Zor_tv:
-    image: reklama
+    image: reklama_tracking
     build: .
     volumes:
-      - /home/graph/Project/Advertisement_tracking/videos/Zor_tv:/Projects/Advertisement_tracking/videos
+      - /home/graph/Project/Ad_tracking_with_color_filter/videos:/Projects/Ad_tracking_with_color_filter/videos
     command: /bin/sh -c 'python3 reklama_detection.py zor_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
