--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 common:
-  model_name: color_filter_model.pt
+  model_name: m_model.pt
   database_api_url: http://13.233.149.171/api/v1/record/
   database_username: admin
   database_password: admin1771
@@ -10,7 +10,7 @@ common:
   company_name: Artel
 
 model:
-  confidence_threshold: 0.95
+  confidence_threshold: 0.92
   IoU_threshold: 0.45
   multiple_labels: False
   amp: False
