--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,13 @@ services:
     command: /bin/sh -c 'python3 reklama_detection.py sport_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
-    restart: on-failure
+    restart: unless-stopped
+    logging:            # Add this section for custom logging configuration
+      driver: "json-file"  # Specify the logging driver (e.g., "json-file")
+      options:
+        max-size: "10m"  # Customize log rotation options
+        max-file: "3"
+        compress: "true"  # Enable log compression
     deploy:
       resources:
         reservations:
@@ -26,7 +32,7 @@ services:
     command: /bin/sh -c 'python3 reklama_detection.py kinoteatr_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
-    restart: on-failure
+    restart: unless-stopped
     deploy:
       resources:
         reservations:
@@ -43,7 +49,7 @@ services:
     command: /bin/sh -c 'python3 reklama_detection.py sevimli_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
-    restart: on-failure
+    restart: unless-stopped
     deploy:
       resources:
         reservations:
@@ -60,7 +66,7 @@ services:
     command: /bin/sh -c 'python3 reklama_detection.py my5_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
-    restart: on-failure
+    restart: unless-stopped
     deploy:
       resources:
         reservations:
@@ -77,7 +83,7 @@ services:
     command: /bin/sh -c 'python3 reklama_detection.py zor_tv'
     environment:
       - NVIDIA_DRIVER_CAPABILITIES=all
-    restart: on-failure
+    restart: unless-stopped
     deploy:
       resources:
         reservations:
